# armadillo_bgu_bundle

./: .gitmodules
Navigation/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  navigation_demo.launch~  package.xml
Navigation/launch/: navigation_params.launch  navigation_params.launch~  navigation_params_robot.launch
Navigation/navigation/config/: move_base_params.yaml  move_base_params.yaml~
armadillo_hl_interface/: .gitignore  CMakeLists.txt  CMakeLists.txt~  changes.md  package.xml  readme.md
armadillo_hl_interface/action/: SimpleDriver.action  SpeechToText.action  TextToSpeech.action~  Torso.action
armadillo_hl_interface/db/: dest_map.xml  room_dixt.xml~
armadillo_hl_interface/include/armadillo_hl_interface/: arm_interface.h  driver_interface.h  driver_interface.h~  fsm.h  head_interface.h  object_handler.h  object_handler.h.new  object_handler.h.old  speech_interface.h  torso_interface.h
armadillo_hl_interface/launch/: drive_and_pick_speech.launch  robot_testing.launch  testing.launch  testing.launch~
armadillo_hl_interface/src/: arm_interface.cpp  drive_and_pick_speech.cpp  driver_interface.cpp  driver_interface.cpp~  fsm.cpp  head_interface.cpp  move_and_pick.cpp  object_handler.cpp  object_handler.cpp.new  robot_test.cpp  servertest.cpp  servicetest.cpp  speech_interface.cpp  speech_pub.cpp  speech_pub.cpp~  test.cpp  torso_interface.cpp
armadillo_hl_interface/worlds/: bbb.sdf  bsim.sdf
find_obj_temp/: CMakeLists.txt  package.xml
find_obj_temp/db/: objdb.xml
find_obj_temp/src/: find_object.cpp  tinyxml2.cpp
find_obj_temp/tools/: hsvrange.py
navigation/: Move.py  README.md  README.md~
object-identification/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
object-identification/msg/: find_result.msg~  find_results.msg~
object-identification/src/: find_objects.cpp  find_objects.cpp~
object_identification/: CMakeLists.txt  README.md  package.xml
object_identification/include/: blas.h  detector.h  hsv2rgb.h  hsv2rgb.h~
object_identification/src/: find_objects.cpp  find_objects.cpp~
object_identification/srv/: find_obj.srv  find_obj.srv~
speech/: README.md  bing.py  bing.py~  bing2.py  demo.py  objects_detection.py  scene_description.py  tts.py  voice_recognition.py  voice_recognition.py~
speech_api/: CMakeLists.txt  package.xml
speech_api/scripts/: bing.py  start_node.py~  voice_recognition.py~
speech_api/src/: bing.py  start_node.py~  voice_recognition.py
vision/: scene_description.py
