<?xml version="1.0"?>
<package>
  <name>armadillo_hl_interface</name>
  <version>0.0.1</version>
  <description>ros_cpp tries</description>
  <maintainer email="yuvalgel@post.bgu.ac.il">Yuval Gelbard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

   <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>