<?xml version="1.0"?>
<package>
    <name>object_identification</name>
    <version>0.0.0</version>
    <description>The object_identification package</description>

    <maintainer email="shekhar@post.bgu.ac.il">shashank</maintainer>
    <license>TODO</license>

	<build_depend>message_generation</build_depend>
	<run_depend>message_generation</run_depend>
	<run_depend>message_runtime</run_depend>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>ar_track_alvar</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    
    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo</run_depend>

    <export>
    	<!-- Other tools can request additional information be placed here -->
    </export>
    
</package>
